// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Top should render close icon when open 1`] = `
<div
  className="Top"
  onClick={[MockFunction]}
>
  <button
    aria-expanded={true}
    className="Menu"
    data-id="nav-button-mobilemenu"
  >
    <Close
      size={24}
    />
    <ScreenReaderOnly>
      Menu
    </ScreenReaderOnly>
  </button>
  <Link
    className="MobileLogo"
    data-id="nav-link-mobilelogo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="MobileAccountDropdownWrapper"
  >
    <Connect(AccountDropdown) />
  </div>
</div>
`;

exports[`Top should render correctly on desktop 1`] = `
<div
  className="Top"
>
  <Link
    className="Logo"
    data-id="nav-link-logo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="RightSideWrapper"
  >
    <Connect(NotificationCenter) />
    <IconButton
      className="SupportButton"
      data-id="nav-button-help"
      onClick={[Function]}
      screenReaderLabel="Help"
      title="Opens a dialog"
    >
      <HelpOutline
        className="SupportIcon"
        size={22}
      />
    </IconButton>
    <Connect(AccountDropdown) />
  </div>
</div>
`;

exports[`Top should render correctly on mobile 1`] = `
<div
  className="Top"
>
  <button
    aria-expanded={false}
    className="Menu"
    data-id="nav-button-mobilemenu"
    onClick={[MockFunction]}
  >
    <Menu
      size={24}
    />
    <ScreenReaderOnly>
      Menu
    </ScreenReaderOnly>
  </button>
  <Link
    className="MobileLogo"
    data-id="nav-link-mobilelogo"
    replace={false}
    to="/landing"
  >
    <Logo
      type="halfWhite"
    />
  </Link>
  <div
    className="MobileAccountDropdownWrapper"
  >
    <Connect(AccountDropdown) />
  </div>
</div>
`;
